--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,9 @@ playground.xcworkspace
 # Packages/
 .build/
 
+# Data
+*.csv
+
 # CocoaPods
 #
 # We recommend against adding the Pods directory to your .gitignore. However
